# MLDeployLab

./: .dockerignore  .gitignore  Dockerfile  MyModel.ipynb  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: Dockerfile  main.py  pyproject.toml  requirements.txt  rice_classification_model.pt  server.py
app/apis/: rice_classifier.py
app/core/: config.py
app/routers/: animal_router.py  rice_router.py
app/schemas/: animal_schema.py  rice_schema.py
app/services/: animal_service.py  rice_service.py
frontend/: Dockerfile  config.py  get_schema.py  main.py  pyproject.toml  requirements.txt
frontend/classifiers/: animal_ui.py  rice_ui.py
notebooks/: AnimalClassifier.ipynb  ImageClassifier.ipynb
