[project]
name = "deployment-model"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.115.12",
    "numpy<2",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
    "uvicorn[standard]>=0.34.3",
]
